<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.distraction.DistractionFragment">

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/imagem"
       android:src="@drawable/meditation"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintTop_toBottomOf="@id/imagem"
       android:layout_marginTop="30dp"
       android:gravity="center_vertical"
       android:id="@+id/layout">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:textSize="12sp"
          app:layout_constraintStart_toStartOf="parent"
          android:paddingLeft="20dp"
         android:gravity="center_vertical"
          android:id="@+id/textView2" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:id="@+id/textView4"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:textSize="12sp"
          android:id="@+id/textView3"
          app:layout_constraintEnd_toEndOf="parent"
          android:gravity="center_vertical"
          android:paddingRight="20dp"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

   <SeekBar
       android:layout_width="match_parent"
       android:layout_marginHorizontal="50dp"
       android:layout_height="wrap_content"
       android:id="@+id/seekBar"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/layout"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="10dp"
       />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/seekBar"
       android:orientation="horizontal"
       android:gravity="center_horizontal"
       android:layout_marginTop="10dp"
       >
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/forward"
          android:id="@+id/button"
          android:layout_marginRight="5dp"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pause"
          android:id="@+id/button2"
          android:layout_marginRight="5dp"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/back"
          android:id="@+id/button3"
          android:layout_marginRight="5dp"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rewind"
          android:id="@+id/button4" />


   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>